# Codex-poc

./: .env.example  .gitignore  .workspace_authority.json  README.md  hooks.py  pyproject.toml  runtime.py  state_machine.py  workspace_root.py
Wiki/: PROGRAM_KANBAN_STUDIO_OPERATIONS_WIKI.html
agents/: __init__.py  api_router.py  architect.py  config.py  cost_tracker.py  design.py  developer.py  git_service.py  orchestrator.py  pm.py  project_po.py  prompt_specialist.py  qa.py  role_base.py  schemas.py  sdk_runtime.py  sdk_specialists.py  telemetry.py
governance/: AGENT_TIERS.md  API_FIRST_AUDIT_PHASE11.md  APPROVAL_RULES.md  ARCHITECTURE.md  ARCHITECTURE_BASELINE.md  CLAUDE.md  CONTROL_AUDIT_PHASE8.md  CONTROL_INVARIANTS.md  DECISION_LOG.md  FRAMEWORK.md  GOVERNANCE_RULES.md  KNOWN_GAPS.md  MEMORY_MAP.md  MODEL_REASONING_MATRIX.md  OPTIMIZATION_REPORT.md  PROJECT.md  REPO_DIAGNOSTIC.md  ROUTING_RULES.md  TASK_DECOMPOSITION.md  TEST_RESULTS.md  THIN_MANAGER_API_FIRST_POLICY.md  VISION.md  __init__.py  approval_templates.md  execution_logs.md  policy_lifecycle.py  rules.py  rules.yml
intake/: __init__.py  compiler.py  gateway.py  ingress.py  interpreter.py  models.py  policy_store.py  status.py
kanban/: __init__.py  board.py
logs/: README.md
memory/: README.md  __init__.py  framework_health.json  memory.db  memory_store.py  session_summaries.json
scripts/: __init__.py  audit_governed_api_truth.py  cli.py  control_room_api.py  generate_structural_truth.py  import_legacy_projects.py  operator_api.py  operator_wall_snapshot.py  policy_review.py  test_openai.py  (+4 more)
(+302 files in other folders)
